--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/application.js"></script>
-
+    <script src="https://kit.fontawesome.com/1608df4208.js" crossorigin="anonymous"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
   </head>
@@ -19,27 +19,27 @@
         <h1 class="text-left">Shopping Cart</h1>
         <div class="row">
           <div class="col-12">
-          <table class="table table-responsive">
+          <table class="table table-responsive table-hover table-striped">
             <tbody>
               <tr>
                 <td class="name">Steak</td>
                 <td class="cost">$<span>25.00</span></td>
                 <td class="quantity">QTY <input type="number" value="5"/></td>
-                <td><button class="btn btn-light btn-md remove">remove</button></td>
+                <td><button class="btn btn-danger btn-md remove"><i class="fas fa-times"></i></button></td>
                 <td class="totalCost"></td>
               </tr>
               <tr>
                 <td class="name">Salmon</td>
                 <td class="cost">$<span>60.00</span></td>
                 <td class="quantity">QTY <input type="number" value="3"/></td>
-                <td><button class="btn btn-light btn-md remove">remove</button></td>
+                <td><button class="btn btn-danger btn-md remove"><i class="fas fa-times"></i></button></td>
                 <td class="totalCost"></td>
               </tr>
               <tr>
                 <td class="name">Chicken</td>
                 <td class="cost">$<span>10.00</span></td>
                 <td class="quantity">QTY <input type="number" value="8"/></td>
-                <td><button class="btn btn-light btn-md remove">remove</button></td>
+                <td><button type="button" class="btn btn-danger btn-md remove"><i class="fas fa-times"></i></button></td>
                 <td class="totalCost"></td>
               </tr>
             </tbody>
@@ -52,7 +52,7 @@
         </form>
 
         <div class="col-12 col-md-6">
-          <h2>Total Price: $ <span id="totalPrice"></span></h2>
+          <h2 id="tag">Total Price: $ <span id="totalPrice"></span><i class="test"></i></h2>
         </div>
       </div>
   </body>
