--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           </table>
         <form class="col-12" id="addCart">
           <input class="mx-2" name="name" type="text" placeholder="Name" required/>
-          <input class="mx-2" name="cost" type="number" placeholder="Cost" />
-          <input class="mx-4" name="quantity" type="number" placeholder="Quantity" />
+          <input class="mx-2" name="cost" type="number" value="0" placeholder="Cost" />
+          <input class="mx-4" name="quantity" type="number" value="0" placeholder="Quantity" />
           <button class="btn mb-1 btn-success btn-md">Add</button>
         </form>
 
